# khali-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  openclaw.json
.claude/agents/: khali-guide.md
.claude/commands/: assignment.md  debug.md  help.md  primer.md  status.md
plugins/trend-scout/: openclaw.plugin.json  package.json
plugins/trend-scout/src/: index.ts
plugins/video-generator/: openclaw.plugin.json  package.json
plugins/video-generator/src/: index.ts
plugins/youtube-extractor/: openclaw.plugin.json  package.json
plugins/youtube-extractor/src/: index.ts
services/agents/: .env.example  Dockerfile  pyproject.toml
services/agents/src/: config.py  main.py
services/agents/src/agents/: script_writer.py  transcript_extractor.py  video_generator.py
services/agents/src/observability/: langfuse.py
services/agents/src/routers/: health.py  shorts.py
services/agents/src/schemas/: __init__.py
services/agents/src/youtube/: transcript.py
skills/: assignment-001-email-feedback-loop.md  coach.md  daily-digest.md  explain-mode.md  primer.md  shorts-producer.md  trend-hunter.md
