[project]
name = "khali-agents"
version = "0.1.0"
description = "YouTube Shorts Generator - Extract, Script, Generate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "redis>=5.0",
    "langfuse>=2.0",
    "youtube-transcript-api>=0.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]
